# wtf-restarted

./: .ghtraf.json  .gitignore  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  release.yml  traffic-badges.yml
docs/: event-reference.md  parameters.md  platform-support.md  powershell-engine.md
docs/stats/: README.md  index.html
scripts/: build_demo.py  demo_render.py  install-hooks.sh  sync-versions.py  update-version.sh
scripts/hooks/: post-commit  pre-commit  pre-push
scripts/vhs/: demo.tape  minimal-cmd.tape  minimal.tape
tests/: conftest.py  generate_golden.py  test_ai_analyzer.py  test_cli.py  test_cli_subprocess.py  test_golden.py  test_history.py  test_investigator.py  test_ps_runner.py  test_render.py  test_thac0_lib.py  test_version.py
tests/one-offs/: query_port_exhaustion_events.ps1
tests/one-offs/thinking/: analyze_vhs_page_dump.py  set_ttyd_compat_win8.ps1  test_conpty_direct.ps1  test_conpty_standalone.c  test_ttyd_process_tree.ps1  test_ttyd_websocket.ps1  test_ttyd_websocket_v2.ps1
tests/output/: .gitkeep
tests/test_data/: README.md
tests/test_data/golden/: diagnosis_default.golden  diagnosis_empty.golden  diagnosis_tier0.golden  diagnosis_tier01.golden  diagnosis_tier1.golden  diagnosis_tier2.golden  diagnosis_verbose.golden  history_default.golden  history_empty.golden
wtf_restarted/: __init__.py  __main__.py  _version.py  cli.py
wtf_restarted/ai/: __init__.py  analyzer.py
wtf_restarted/ai/backends/: prompt_only.py
wtf_restarted/ai/prompts/: diagnose.md
wtf_restarted/engine/: __init__.py  history.py  investigator.py  ps_runner.py
wtf_restarted/lib/: __init__.py
wtf_restarted/lib/log_lib/: manager.py
wtf_restarted/output/: __init__.py  channels.py  render.py  spinners.py
wtf_restarted/ps1/: history.ps1  investigate.ps1
