[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtf-restarted"
dynamic = ["version"]
description = "Why did my Windows PC restart? One command, instant answers."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "djdarcy", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = ["windows", "restart", "crash", "bsod", "diagnosis", "event-log", "sysadmin", "wtf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
ai = [
    # Claude Code CLI and Codex CLI are external tools, not pip packages.
    # This extra is a placeholder for future AI helper dependencies.
]

[project.urls]
Homepage = "https://github.com/DazzleTools/wtf-restarted"
Repository = "https://github.com/DazzleTools/wtf-restarted"
Issues = "https://github.com/DazzleTools/wtf-restarted/issues"

[project.scripts]
wtf-restarted = "wtf_restarted.cli:main"
wtfr = "wtf_restarted.cli:main"

[tool.setuptools.dynamic]
version = {attr = "wtf_restarted._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["wtf_restarted", "wtf_restarted.*"]

[tool.setuptools.package-data]
wtf_restarted = ["ps1/*.ps1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
